# pf-schedulingagent

./: .gitignore  Dockerfile  README.md  pyproject.toml
docs/reqs/: cancel-appointment.md
env_setup/: 01-dynamodb.sh  02-iam-roles.sh  03-ecr.sh  04-ecs-fargate.sh  05-secrets.sh  06-sms.sh  07-deploy.sh  08-tag-resources.sh  env-config-prod.sh  env-config.sh
env_setup/prod/: 01-dynamodb.sh  02-iam-roles.sh  03-ecr.sh  04-ecs-fargate.sh  05-secrets.sh  06-sms.sh  07-deploy.sh  08-dns.sh
scripts/: _eloise_predicted_output.json  dev-server.sh  gen_store_test_cases.py  test_intent_classifier.py
src/: config.py  main.py
src/auth/: __init__.py  context.py  office_hours.py  phone_auth.py
src/channels/: admin.py  chat.py  conversation_log.py  formatters.py  history.py  outbound.py  outbound_consumer.py  outbound_store.py  outbound_vapi.py  schemas.py  sms.py  vapi.py  vapi_config.py  vapi_llm.py
src/observability/: __init__.py  logging.py  middleware.py  retry.py
src/orchestrator/: __init__.py  intent.py  response_utils.py  welcome.py
src/tools/: api_client.py  date_utils.py  pii_filter.py  project_rules.py  scheduling.py  weather.py  weather_aware.py
tasks/: call-forward-plan.md  fix-customer-call-issues.md  fix-store-caller-issues.md  outbound-calling-plan.md  qa-baseline-2026-04-16.md  vapi-custom-llm.md
test-client/: chat-test.html
tests/: conftest.py
tests/integration/: conftest.py  routing_scenarios.json  scenarios.json  test_classifier_routing.py  test_e2e_chat_api.py  test_multi_turn.py  test_scheduling_flows.py  test_structural.py
(+30 files in other folders)
