[project]
name = "pf-syn-schedulingagents-bot"
version = "0.1.0"
description = "ProjectsForce Scheduling AI Bot — AgentSquad orchestration for appointment scheduling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-squad[aws]",
    "fastapi>=0.109",
    "httpx",
    "tenacity",
    "boto3",
    "pydantic>=2.0",
    "pydantic-settings",
    "uvicorn>=0.40.0",
    "python-multipart>=0.0.22",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
    "moto[dynamodb,s3,secretsmanager]",
    "ruff",
    "pre-commit",
    "httpx",
    "openpyxl>=3.1.5",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "e2e: end-to-end scheduling scenario tests",
    "live: live API tests against deployed AWS service",
    "structural: structural tests with direct tool calls (may modify project state)",
]
